==> iauther/Demo/platform/chip/gd/gd32f4xx/dal/dal_uart.c <==
#include "dal_uart.h"
#include "dal_gpio.h"
#include "lock.h"
#include "gd32f4xx_usart.h"
#define URT_BUF_LEN      1000

static void uart_dma_init(dal_uart_handle_t *h)
{
    uart_info_t *info=(uart_info_t*)&uartInfo[h->cfg.port];
    dma_single_data_parameter_struct init;
    dma_info_t *dma;
    
    dma = &info->dmaRx;
    rcu_periph_clock_enable(dma->rcu);
    dma_deinit(dma->dma, dma->chn);
    init.direction = DMA_PERIPH_TO_MEMORY;
    init.memory0_addr = (U32)h->dr.buf;
    init.memory_inc = DMA_MEMORY_INCREASE_ENABLE;
    init.number = URT_BUF_LEN;
    init.periph_addr = (U32)(&USART_DATA(info->urt));
    init.periph_inc = DMA_PERIPH_INCREASE_DISABLE;
    init.periph_memory_width = DMA_PERIPH_WIDTH_8BIT;
    init.priority = DMA_PRIORITY_ULTRA_HIGH;
    dma_single_data_mode_init(dma->dma, dma->chn, &init);
    dma_channel_subperipheral_select(dma->dma, dma->chn, dma->sub);
    dma_circulation_disable(dma->dma, dma->chn);
    dma_channel_enable(dma->dma, dma->chn);

    dma = &info->dmaTx;
    rcu_periph_clock_enable(dma->rcu);
    dma_deinit(dma->dma, dma->chn);
    init.direction = DMA_MEMORY_TO_PERIPH;
    init.memory0_addr = (U32)h->dt.buf;
    init.memory_inc = DMA_MEMORY_INCREASE_ENABLE;
    init.number = URT_BUF_LEN;
    init.periph_addr = (U32)(&USART_DATA(info->urt));
    init.periph_inc = DMA_PERIPH_INCREASE_DISABLE;
    init.periph_memory_width = DMA_PERIPH_WIDTH_8BIT;
    init.priority = DMA_PRIORITY_ULTRA_HIGH;
    dma_single_data_mode_init(dma->dma, dma->chn, &init);
    dma_channel_subperipheral_select(dma->dma, dma->chn, dma->sub);
    dma_circulation_disable(dma->dma, dma->chn);
    dma_channel_enable(dma->dma, dma->chn);
}

handle_t dal_uart_init(dal_uart_cfg_t *cfg)
{   
    U32 urt;
    uart_info_t *info=NULL;
    dal_uart_handle_t *h=NULL;
    
    if(!cfg || cfg->port>UART_7) {
        return NULL;
    }
    
    if(uartHandle[cfg->port]) {
        return uartHandle[cfg->port];
    }
    
    h = calloc(1, sizeof(dal_uart_handle_t));
    if(!h) {
        return NULL;
    }
    h->cfg = *cfg;
    h->callback[CB_MAX] = cfg->para.callback;
    
    info = (uart_info_t*)&uartInfo[h->cfg.port];
    h->lock = lock_init();
    
    /* 开启时钟 */
    rcu_periph_clock_enable(info->rx.rcu); 
    rcu_periph_clock_enable(info->tx.rcu); 
    rcu_periph_clock_enable(info->rcu); 

    /* 配置GPIO复用功能 */
    gpio_af_set(info->rx.grp,info->rx.af,info->rx.pin);	
    gpio_af_set(info->tx.grp,info->tx.af,info->tx.pin);	

    /* 配置GPIO的模式 */
    gpio_mode_set(info->rx.grp,GPIO_MODE_AF,GPIO_PUPD_PULLUP,info->rx.pin);
    gpio_mode_set(info->tx.grp, GPIO_MODE_AF,GPIO_PUPD_PULLUP,info->tx.pin);

    gpio_output_options_set(info->rx.grp,GPIO_OTYPE_PP,GPIO_OSPEED_50MHZ,info->rx.pin);
    gpio_output_options_set(info->tx.grp,GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, info->tx.pin);

    /* 配置串口的参数 */
    usart_deinit(info->urt);
    usart_baudrate_set(info->urt,h->cfg.baudrate);
    usart_parity_config(info->urt,USART_PM_NONE);
    usart_word_length_set(info->urt,USART_WL_8BIT);
    usart_stop_bit_set(info->urt,USART_STB_1BIT);
	//usart_hardware_flow_coherence_config(info->urt,USART_HCM_NONE);
    if(h->cfg.msb) {
        usart_data_first_config(info->urt,USART_MSBF_MSB);
    }
    else {
        usart_data_first_config(info->urt,USART_MSBF_LSB);
    }
    
    usart_receive_config(info->urt,USART_RECEIVE_ENABLE);
    usart_transmit_config(info->urt,USART_TRANSMIT_ENABLE);
    usart_enable(info->urt);
    
    if(h->cfg.mode==MODE_DMA) {
        usart_dma_transmit_config(info->urt, USART_DENT_ENABLE);    //打开串口DMA发送
        usart_dma_receive_config(info->urt,  USART_DENR_DISABLE);     //打开串口DMA接收
        uart_dma_init(h);
    }
    
    if(h->cfg.mode==MODE_IT || h->cfg.mode==MODE_DMA) {
        usart_flag_clear(info->urt, USART_FLAG_TC);
        usart_interrupt_enable(info->urt, USART_INT_RBNE);                  //使能读区非空中断  
        usart_interrupt_enable(info->urt, USART_INT_IDLE);                  //使能空闲中断
        //usart_interrupt_enable(info->urt, USART_INT_TC);                    //发送完成中断
        nvic_irq_enable(info->IRQn,5,0);
    }
    
    uartHandle[cfg->port] = h;
    
    return h;
}

int dal_uart_deinit(handle_t h)
{
    U32 urt;
    dal_uart_handle_t *dh=(dal_uart_handle_t*)h;
    
    if(!dh) {
        return -1;
    }
    
    urt = uartInfo[dh->cfg.port].urt;
    lock_free(dh->lock);
    usart_deinit(urt);
    uartHandle[dh->cfg.port] = NULL;
    
    free(dh);
    
    return 0;
}

int dal_uart_read(handle_t h, U8 *data, int len)
{
    int i;
    U32 urt;
    dal_uart_handle_t *dh=(dal_uart_handle_t*)h;
    
    if(!dh || !data || !len) {
        return -1;
    }
    
    lock_on(dh->lock);
    urt = uartInfo[dh->cfg.port].urt;
    if(dh->cfg.mode==MODE_POLL) {
        for(i=0; i<len; i++) {
            data[i] = (U8)usart_data_receive(urt);
            while(RESET == usart_flag_get(urt,USART_FLAG_TBE));
        }
    }
    lock_off(dh->lock);
    
    return 0;
}

int dal_uart_write(handle_t h, U8 *data, int len)
{
    int i;
    U32 urt;
    dal_uart_handle_t *dh=(dal_uart_handle_t*)h;
    
    if(!h || !data || !len) {
        return -1;
    }
    
    lock_on(dh->lock);
    urt = uartInfo[dh->cfg.port].urt;
    if(dh->cfg.mode==MODE_DMA) {
        uart_dma_send(dh, data, len);
    }
    else {
    
        for(i=0; i<len; i++) {
            usart_data_transmit(urt, data[i]);
            while(usart_flag_get(urt,USART_FLAG_TBE) == RESET);
        }
    }
    lock_off(dh->lock);
    
    return 0;
}
