==> iauther/Demo/platform/chip/st/stm32h7xx/dal/dal_uart.c <==
#include "dal_uart.h"
#include "lock.h"

static int uart_dma_init(uart_handle_t *h)
{
    uart_map_t *map=&UART_MAP[h->port];
    
    h->hdmaRx.Instance = map->dmaRx;
    h->hdmaRx.Init.Direction = DMA_PERIPH_TO_MEMORY;
    h->hdmaRx.Init.PeriphInc = DMA_PINC_DISABLE;
    h->hdmaRx.Init.MemInc = DMA_MINC_ENABLE;
    h->hdmaRx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
    h->hdmaRx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
    h->hdmaRx.Init.Mode = DMA_NORMAL;
    h->hdmaRx.Init.Priority = DMA_PRIORITY_HIGH;
    h->hdmaRx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
    if (HAL_DMA_Init(&h->hdmaRx) != HAL_OK) {
        return -1;
    }
    __HAL_LINKDMA(&h->huart, hdmarx, h->hdmaRx);
    
#if 1
    h->hdmaTx.Instance = map->dmaTx;
    h->hdmaTx.Init.Direction = DMA_MEMORY_TO_PERIPH;
    h->hdmaTx.Init.PeriphInc = DMA_PINC_DISABLE;
    h->hdmaTx.Init.MemInc = DMA_MINC_ENABLE;
    h->hdmaTx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
    h->hdmaTx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
    h->hdmaTx.Init.Mode = DMA_NORMAL;
    h->hdmaTx.Init.Priority = DMA_PRIORITY_LOW;
    h->hdmaTx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
    if (HAL_DMA_Init(&h->hdmaTx) != HAL_OK) {
        return -1;
    }
    __HAL_LINKDMA(&h->huart, hdmatx, h->hdmaTx);
    
#endif    
    
    return 0;
}

handle_t dal_uart_init(dal_uart_cfg_t *cfg)
{
    HAL_StatusTypeDef st;
    uart_map_t *map;
    UART_InitTypeDef  init;
    
    uart_handle_t *h=calloc(1, sizeof(uart_handle_t));
    
    if(!h || !cfg) {
        return NULL;
    }

    map = &UART_MAP[cfg->port];
    
    init.BaudRate   = cfg->baudrate;
    init.StopBits   = UART_STOPBITS_1;
    init.WordLength = UART_WORDLENGTH_8B;
    init.Parity     = UART_PARITY_NONE;
    init.Mode       = UART_MODE_TX_RX;
    init.HwFlowCtl  = UART_HWCONTROL_NONE;
    init.OverSampling = UART_OVERSAMPLING_16;
    init.ClockPrescaler = UART_PRESCALER_DIV1;
    
    h->mode  = cfg->mode;
    h->port  = cfg->port;
    h->huart.Instance = map->usart;
    h->huart.Init = init;
    h->para = cfg->para;
    
    uart_handle[h->port] = h;
    
    HAL_UART_DeInit(&h->huart);
    st = HAL_UART_Init(&h->huart);
    if(st!=HAL_OK) {
        free(h); return NULL;
    }

    if(h->mode==MODE_DMA) {
        HAL_UART_Receive_DMA(&h->huart, h->para.buf, h->para.blen);
    }
    else if(h->mode==MODE_IT) {
        HAL_UART_Receive_IT(&h->huart, h->para.buf, h->para.blen);
        uart_irq_en(h, 1);
    }
    h->lock = lock_dynamic_new();
    
    return h;
}

int dal_uart_deinit(handle_t h)
{
    uart_handle_t *uh=(uart_handle_t*)h;
    
    if(!uh) {
        return -1;
    }
    
    HAL_UART_DeInit(&uh->huart);
    lock_dynamic_free(uh->lock);
    free(uh);
    
    return 0;
}

int dal_uart_read(handle_t h, U8 *data, U32 len)
{
    int r;
    uart_handle_t *uh=(uart_handle_t*)h;
    
    if(!h || !data || !len) {
        return -1;
    }
    
    lock_dynamic_hold(uh->lock);
    if(uh->mode==MODE_POLL) {
        r = HAL_UART_Receive(&uh->huart, data, len, HAL_MAX_DELAY);
    }
    if(uh->mode==MODE_IT) {
        r = HAL_UART_Receive_IT(&uh->huart, data, len);
    }
    else {
        r = HAL_UART_Receive_DMA(&uh->huart, data, len);
    }
    
    if(r!=HAL_OK) {
        uart_reset(uh);
    }
    
    lock_dynamic_release(uh->lock);
    
    return r;
}

int dal_uart_write(handle_t h, U8 *data, U32 len)
{
    int r;
    uart_handle_t *uh=(uart_handle_t*)h;
    
    if(!h || !data || !len) {
        return -1;
    }

    lock_dynamic_hold(uh->lock);

    if(uh->mode==MODE_DMA) {
        uh->txFinished = 0;
        r = HAL_UART_Transmit_DMA(&uh->huart, data, len);
        uart_tx_wait(uh, 5);
    }
    else if(uh->mode==MODE_IT) {
        uh->txFinished = 0;
        r = HAL_UART_Transmit_IT(&uh->huart, data, len);
        uart_tx_wait(uh, 5);
    }
    else {
        r = HAL_UART_Transmit(&uh->huart, data, len, HAL_MAX_DELAY);
    }
    
    if(r!=HAL_OK) {
        uart_reset(uh);
    }
    
    lock_dynamic_release(uh->lock);
    
    return r;
}
